reflection warning FAQ